# uinspect

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
cicd/: aarch64.yml  common.yml  x86_64.yml
cmake/: Findfrida.cmake
example/: CMakeLists.txt  common.h  demo.cc  demo_hook.cc  map_engine_hook.cc  perception_hook.cc  planning_hook.cc  print_demo.cc  print_hook.cc
examples/: CMakeLists.txt  print_demo.cc  print_hook.cc
examples/hello/: hello.cc
examples/hook/: CMakeLists.txt  hook.cc
src/: CMakeLists.txt  Hook.cc  HookCtx.cc  HookCtx.h  HookRegistry.cc  HookRegistry.h  PerfMonitor.h  common.h  hello.cc  hook.cc  hook.h  init.cc  uinspect.c  uinspect.cc  uinspect.h
uinspect/: FunctionListener.cc  FunctionListener.h  Hook.cc  Hook.h  HookRegistry.h  PerfMonitor.h  SegmentManager.cc  SegmentManager.h  common.h  elf.h  hook.cc  hook.h  hook0.cc  hook0.h  hook1.cc  hook1.h  init.cc  init.h  main.cc  maps.cc  maps.h  uinspect.cc  uinspect.h  utils.h
